target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(Engine)
add_subdirectory(Entities)
add_subdirectory(Events)
add_subdirectory(Files)
add_subdirectory(Interfaces)
add_subdirectory(Logging)
add_subdirectory(Math)
add_subdirectory(Media)
add_subdirectory(Parser)
add_subdirectory(Scripts)
add_subdirectory(Util)