target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(Components)
add_subdirectory(ECS)
add_subdirectory(Engine)
add_subdirectory(Events)
add_subdirectory(Input)
add_subdirectory(Interfaces)
add_subdirectory(Logging)
add_subdirectory(Math)
add_subdirectory(Media)
add_subdirectory(Parser)
add_subdirectory(Render)
add_subdirectory(Resources)
add_subdirectory(Scripts)
add_subdirectory(Serialization)
add_subdirectory(Transforms)
add_subdirectory(Util)
