target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(Audio)
add_subdirectory(Cameras)
add_subdirectory(Components)
add_subdirectory(ECS)
add_subdirectory(Engine)
add_subdirectory(Events)
add_subdirectory(Graphics)
add_subdirectory(Input)
add_subdirectory(Interfaces)
add_subdirectory(Logging)
add_subdirectory(Math)
add_subdirectory(Parser)
add_subdirectory(Particles)
add_subdirectory(Render)
add_subdirectory(Resources)
add_subdirectory(Scripts)
add_subdirectory(Serialization)
add_subdirectory(Systems)
add_subdirectory(Tilemap)
add_subdirectory(Util)
