target_sources(BENG PUBLIC
    Files.hpp
    GUI.hpp
    Logging.hpp
    Media.hpp
    Menu.hpp
    Parser.hpp
    Resources.hpp
    Scripts.hpp
    Shapes.hpp
    Util.hpp
)

add_subdirectory(Files)
add_subdirectory(GUI)
add_subdirectory(Logging)
add_subdirectory(Media)
add_subdirectory(Menu)
add_subdirectory(Parser)
add_subdirectory(Scripts)
add_subdirectory(Shapes)
add_subdirectory(Util)