target_sources(BLIB PRIVATE
	Animation2D.cpp
	BasicModel.cpp
	BatchCircle.cpp
	BatchedShapes2D.cpp
	BatchedSlideshows.cpp
	BatchedSprites.cpp
	BatchIcon.cpp
	BatchRectangle.cpp
	BatchSlideshow.cpp
	BatchSlideshowSimple.cpp
	BatchSprite.cpp
	BatchSpriteSimple.cpp
	BatchTriangle.cpp
	Circle.cpp
	Cone.cpp
	Cube.cpp
	Dummy2D.cpp
	Icon.cpp
	Rectangle.cpp
	Slideshow.cpp
	Sphere.cpp
	Sprite.cpp
	Text.cpp
	Triangle.cpp
	VertexBuffer2D.cpp
	VertexBuffer3D.cpp
)

add_subdirectory(Animation2D)
add_subdirectory(Components)
add_subdirectory(Shapes2D)
add_subdirectory(Text)
