target_sources(BLIB PRIVATE
    AttachmentImageSet.cpp
    AttachmentSet.cpp
    BlendParameters.cpp
    Buffer.cpp
    CleanupManager.cpp
    ComputePipeline.cpp
    ComputePipelineParameters.cpp
    DedicatedCommandBuffers.cpp
    DescriptorPool.cpp
    DescriptorSet.cpp
    Framebuffer.cpp
    Image.cpp
    Pipeline.cpp
    PipelineInstance.cpp
    PipelineLayout.cpp
    PipelineParameters.cpp
    PipelineSpecialization.cpp
    RenderPass.cpp
    RenderPassParameters.cpp
    RenderTexture.cpp
    Sampler.cpp
    SharedCommandBuffer.cpp
    SharedCommandPool.cpp
    Swapchain.cpp
    Texture.cpp
    TextureFormatManager.cpp
    VulkanLayer.cpp
)

add_subdirectory(Utils)
